--- a/Views/News.cshtml
+++ b/Views/News.cshtml
@@ -6,17 +6,22 @@
 @{
 	Layout = "_LayoutWithBreadcrumb.cshtml";
 	
-	var itemsPerPage = 6;
+	var itemsPerPage = 9;
 	var pageNumber = 1;
 	
 	if (!int.TryParse(Context.Request.Query["page"], out pageNumber))
 	pageNumber = 1;
 
                 
-                	var selection = Umbraco?.Content(Guid.Parse("6e9013aa-9d62-4add-a694-8997eb2cf757"))?
-                    .ChildrenOfType("newsItemPage")?
-                    .Where(x => x.IsVisible())
-                    .OrderByDescending(x => x.CreateDate).ToList();
+                	
+
+	var selection = Umbraco.Content(Guid.Parse("ce810264-5c43-49f4-b7e5-399a7f472b85"))
+    .ChildrenOfType("newsItemPage")
+    .Where(x => x.IsVisible())
+    .OrderByDescending(x => x.CreateDate);
+
+
+
                     
                      var totalItems = selection?.Count() ?? 0;
                      var pagedItems = selection?.Skip((pageNumber -1) * itemsPerPage).Take(itemsPerPage);
