--- a/Views/Partials/_Signup.cshtml
+++ b/Views/Partials/_Signup.cshtml
@@ -1,12 +1,23 @@
 ﻿@inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage
+@using Crito.Models;
+@using ContentModels = Umbraco.Cms.Web.Common.PublishedModels;
+@using Umbraco.Cms.Web.Common.PublishedModels;
+
+@{
+    var subsribeform = new SubscribeForm();
+}
+
 
 <section class="signup">
     <div class="container">
         <div class="text">@Model.Value("signupTitle")</div>
-        <form>
-            <input type="text" placeholder="@Model.Value("signupFormText")">
-            <a class="btn-theme" href="@Model.Value("signupButtonUrl")">@Model.Value("signupButtonText") <i class="fa-regular fa-arrow-up-right"></i></a>
-        </form>
+        @using (Html.BeginUmbracoForm("Index", "Subscribe", FormMethod.Post))
+        {
+            <div asp-validation-summary="All"></div>
+            <input asp-for="@subsribeform.Email"  type="text" placeholder="@Model.Value("signupFormText")">
+            <button type="submit" class="btn-theme">@Model.Value("signupButtonText") <i class="fa-regular fa-arrow-up-right"></i></button>
+        }
     </div>
     <img src="/images/signup-element.svg" alt="">
 </section>
+        
