--- a/Views/Partials/_Footer.cshtml
+++ b/Views/Partials/_Footer.cshtml
@@ -9,31 +9,31 @@
             <div class="link-content">
                 <div class="links">
                     <a class="big" href="#">Company</a>
-                    <a class="small" href="#">Company</a>
-                    <a class="small" href="#">Company</a>
-                    <a class="small" href="#">Company</a>
-                    <a class="small" href="#">Company</a>
+                    <a class="small" href="#">About</a>
+                    <a class="small" href="#">Features</a>
+                    <a class="small" href="#">Works</a>
+                    <a class="small" href="#">Career</a>
                 </div>
                 <div class="links">
                     <a class="big" href="#">Help</a>
-                    <a class="small" href="#">Company</a>
-                    <a class="small" href="#">Company</a>
-                    <a class="small" href="#">Company</a>
-                    <a class="small" href="#">Company</a>
+                    <a class="small" href="#">Customer Support</a>
+                    <a class="small" href="#">Delivery Details</a>
+                    <a class="small" href="#">Terms & Conditions</a>
+                    <a class="small" href="#">Privacy Policy</a>
                 </div>
                 <div class="links">
                     <a class="big" href="#">Resources</a>
-                    <a class="small" href="#">Company</a>
-                    <a class="small" href="#">Company</a>
-                    <a class="small" href="#">Company</a>
-                    <a class="small" href="#">Company</a>
+                    <a class="small" href="#">Free eBooks</a>
+                    <a class="small" href="#">Development Tutorialy</a>
+                    <a class="small" href="#">How to - Blog/a>
+                    <a class="small" href="#">Youtube Playlist</a>
                 </div>
                 <div class="links">
                     <a class="big" href="#">Link</a>
-                    <a class="small" href="#">Company</a>
-                    <a class="small" href="#">Company</a>
-                    <a class="small" href="#">Company</a>
-                    <a class="small" href="#">Company</a>
+                    <a class="small" href="#">Free eBooks</a>
+                    <a class="small" href="#">Development Tutorialy</a>
+                    <a class="small" href="#">How to - Blog/a>
+                    <a class="small" href="#">Youtube Playlist</a>
                 </div>          
              </div>
           <div class="lines"><img src="~/images/background/lines-right.svg" alt=""></div>
