--- a/Views/Contact.cshtml
+++ b/Views/Contact.cshtml
@@ -28,7 +28,7 @@
             </div>
             <div class="email form-group">
                 <label for="email"></label>
-                <input asp-for="@contactForm.Email" id="email" type="text" class="invalid" placeholder="Email">
+                <input asp-for="@contactForm.Email" id="email" type="email" class="invalid" placeholder="Email" required>
             </div>
             <div class="message form-group">
                 <label for="message"></label>
