--- a/Views/Partials/_Footer.cshtml
+++ b/Views/Partials/_Footer.cshtml
@@ -45,10 +45,10 @@
             &copy; @DateTime.Now.Year Cito - Consulting Company Inc. All Rights Reserved.
         </div>
         <div class="social">
-            <a class="social-media" href="#" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-            <a class="social-media" href="#" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-            <a class="social-media" href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-            <a class="social-media" href="#"target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            <a class="social-media" href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            <a class="social-media" href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+            <a class="social-media" href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a class="social-media" href="https://www.linkedin.com/"target="_blank"><i class="fa-brands fa-linkedin"></i></a>
         </div>
     </div>
 </section>
