--- a/Views/Partials/_Navigation.cshtml
+++ b/Views/Partials/_Navigation.cshtml
@@ -27,10 +27,10 @@
                         <div class="contact-info-last"><i class="fa-light fa-location-dot"></i> Sveavägen 31, 111 34 STOCKHOLM</div>
                     </div>
                     <div class="social">
-                        <a class="social-media" href="#" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                        <a class="social-media" href="#" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-                        <a class="social-media" href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                        <a class="social-media" href="#" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                        <a class="social-media" href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                        <a class="social-media" href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                        <a class="social-media" href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a class="social-media" href="https://www.linkedin.com/"target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
             </div>
                 <div class="second-row">
